main/default/objects/Template_Structure__mdt/Template_Structure__mdt.object-meta.xml
<CustomObject>
    <description>Template Structure for SharePoint</description>
    <label>Template Structure</label>
    <pluralLabel>Template Structures</pluralLabel>
</CustomObject>