main/default/objects/Template_Structure__mdt/fields/Order_of_Folders__c.field-meta.xml
<CustomField>
    <fullName>Order_of_Folders__c</fullName>
    <label>Order of Folders</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>