main/default/objects/Template_Structure__mdt/fields/Parent_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Folder_Name__c</fullName>
    <label>Parent Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>